src/objects/EMP_Organization_Member__c.object
<CustomObject>
    <fields>
        <fullName>Cycle__c</fullName>
        <label>Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EMP_Organization_Member_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EMP Organization Member Consultant</label>
        <referenceTo>EMP_Consultant__c</referenceTo>
        <relationshipLabel>EMP Organization Members</relationshipLabel>
        <relationshipName>EMP_Organization_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EMP_Organization__c</fullName>
        <label>EMP Organization</label>
        <referenceTo>EMP_Organization__c</referenceTo>
        <relationshipLabel>EMP Organization Members</relationshipLabel>
        <relationshipName>EMP_Organization_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Farmer_type__c</fullName>
        <label>Farmer type</label>
        <picklist>
            <picklistValues>
                <fullName>Miembro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No miembro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Member_Name__c</fullName>
        <label>Organization Member Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_member_national_ID__c</fullName>
        <label>Organization member national ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>EMP Organization Members</relationshipLabel>
        <relationshipName>EMP_Organization_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>deseaRegistrarReplicaParcela__c</fullName>
        <label>deseaRegistrarReplicaParcela</label>
        <picklist>
            <picklistValues>
                <fullName>Réplica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parcela de aprendizaje</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>EMP Organization Member</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>EMP Organization Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMP Organization Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>